# opentrade

./: .gitignore  .valgrind-python.supp  .valgrindrc  Dockfile-dev  README.md  install_centos.sh  makefile  opentrade.conf-example  sim.conf  test_latency.conf  test_latency.sqlite3
algos/: AlphaExample.py  TwapPy.py  test.py
scripts/: archive.sh  backtest.py  backtest_multi_srcs.py  bin2txt.py  build_module.py  clear_unconfirmed.py  convert_tick_file.py  cpplint.py  gen_supp.sh  genpass.py  load_securities.py  opentrade.sh  parse_confirmation.py  roll_confirmation.py  run_cmd.py  shutdown.py  test_rest.py  test_ws.py  txt2bin.py  update_rate.py
src/: CMakeLists.txt
src/3rd/: opentick.hpp
src/3rd/simple_web_server/: server_http.hpp
src/3rd/simple_websocket_server/: server_ws.hpp
src/adapters/: CMakeLists.txt
src/adapters/bpipe/: CMakeLists.txt  bpipe.cc  bpipe.h
src/adapters/ctp/: CMakeLists.txt  data.cc  trade.cc
src/adapters/fix42/: CMakeLists.txt  fix42.cc
src/adapters/ib/: CMakeLists.txt  ib.cc  ib.h
src/algo/twap/: twap.cc  twap.h
src/algos/: CMakeLists.txt
src/algos/peg/: CMakeLists.txt  peg.cc
src/algos/smartroute/: CMakeLists.txt  smartroute.cc
src/algos/twap/: CMakeLists.txt  api.cc  twap.cc  twap.h
src/fix/: CMakeLists.txt  application.h  filelog.h  fix.h  sim_server.cc  sim_server.h  sim_server_file.cc  sim_server_live.cc
src/ib/: ib.cc
src/opentrade/: CMakeLists.txt  account.cc  account.h  adapter.cc  adapter.h  algo.cc  algo.h  backtest.cc  backtest.h  bar_handler.h  commission.cc  commission.h  common.h  connection.cc  connection.h  consolidation.cc  consolidation.h  cross_engine.cc  cross_engine.h  database.cc  database.h  exchange_connectivity.cc  exchange_connectivity.h  indicator_handler.h  logger.h  main.cc  market_data.cc  market_data.h  opentick.cc  opentick.h  order.cc  order.h  position.cc  position.h  position_value.h  python.cc  python.h  risk.cc  risk.h  security.cc  (+9 more)
src/sim/server/: server.cc
src/unit_test/: CMakeLists.txt  main.cc  test_consolidation.cc  test_utility.cc
web/: index-070bd4154b5b9b40c1cc.bundle.js  index-08294351b2effe4a600c.bundle.js  index-0ecb964a89f578a89581.bundle.js  index-1655e2cdcd8e90f8fb7e.bundle.js  index-1eea6128c2d4f26eaa22.bundle.js  index-2354187f21e1187c4819.css  index-238a903308994870e6f6.bundle.js  index-24f371745163d853b722.bundle.js  index-2b6d229b48a1b05d2c4f.bundle.js  index-3e5d8e75b57b59af1910.bundle.js  index-4173b0f0d0e69b94b6f2.css  index-4d83f7f7be313a3c7679.css  index-4d95df1ba5a818dc21ce.bundle.js  index-569f490e0a3e1e876b31.bundle.js  index-58dbcb89737dbe482322.bundle.js  index-5dc79e885f249a9b346e.bundle.js  index-5e25f2665f8b188adacb.bundle.js  index-6192fd97f0b08af5d425.bundle.js  index-61f6967418ba6521bae4.bundle.js  index-659fd510803056236744.bundle.js  index-6775f80461f928b7fe6d.bundle.js  index-6dc21b8dfaa9c8558ce3.bundle.js  index-6ebc4909e0d5ee827edf.bundle.js  index-7617a440d7cae3ef8513.bundle.js  index-7c4f81a800ddc95e0c54.bundle.js  index-80668cdc389e9afe8df7.bundle.js  index-8563627080dc058da106.css  index-8656bdc820863fd8b381.css  index-8a1aeb7a1902287cec8a.bundle.js  index-96d689a77eb08aaf6f28.bundle.js  index-98e5150264e28746d0e6.bundle.js  index-996d0b93c468be55b5f8.bundle.js  index-9c189b8b5628919a32cc.css  index-9ef28136fc64575a99f5.bundle.js  index-a07d038df97d9d4579b3.bundle.js  index-a742e7268db264fdbfe5.bundle.js  (+9 more)
(+11 files in other folders)
